# flipcoin-python

./: .env.example  README.md  pyproject.toml
examples/: crewai_agent.py  news_agent.py  simple_agent.py  streaming_agent.py  trading_agent.py
flipcoin/: __init__.py  async_client.py  client.py  models.py  utils.py
tests/: conftest.py  test_schema_sync.py
