[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flipcoin"
version = "0.4.0"
description = "Python SDK for FlipCoin prediction markets platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "FlipCoin", email = "dev@flipcoin.fun" }]
keywords = ["prediction-markets", "blockchain", "base", "trading", "agent", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.25.0"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "python-dotenv"]

[project.urls]
Homepage = "https://flipcoin.fun"
Documentation = "https://github.com/flipcoin-fun/flipcoin-python"
Repository = "https://github.com/flipcoin-fun/flipcoin-python"
